<resources>
    <string name="app_name">Food@Door</string>
    <string name="action_settings">Settings</string>
    <string name="deliveringto">DELIVERING TO</string>

    <string name="bottom_home">Home</string>
    <string name="bottom_orders">Orders</string>
    <string name="bottom_userInfo">User</string>
    <string name="bottom_checkout">Checkout</string>
    <string name="delivery_from">From</string>

    <!-- Login -->
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Phone Number</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_reset">Reset Password</string>
    <string name="button_sign_up">Sign Up</string>

    <!-- Facebook -->
    <string name="facebook_app_id">205344443265000</string>
    <string name="fb_login_protocol_scheme">fb205344443265000</string>

    <!-- Reset Password -->
    <string name="title_reset">Reset Password</string>
    <string name="old_password">Provisional Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="button_submit">Submit</string>

    <!-- Register -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_address">Address (City)</string>
    <string name="button_register">Register</string>

    <!-- Check out -->
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-4653619194621723/3984893897</string>
    <string name="interstitial_ad_page">ca-app-pub-4653619194621723/8598393496</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart_button">Add to Cart</string>
</resources>
